Added basic redis caching implementation for faster api response.